@@ -57,7 +57,7 @@ z3c.contents = 0.5.0
 z3c.coverage = 1.1.2
 z3c.etestbrowser = 1.3.0
 z3c.evalexception = 2.0
-z3c.form = 2.3.1
+z3c.form = 2.3.0
 z3c.formui = 2.2.0
 z3c.layer.pagelet = 1.7.0
 z3c.locales = 0.2.0
